feat(project): Сделал иконки и HomePage

--- a/src/scss/icons.scss
+++ b/src/scss/icons.scss
@@ -2,3 +2,153 @@
   mask: url("@/assets/icons/loader.svg") 0 / cover no-repeat;
   display: inline-block;
 }
+
+.icon-calendar-blanc-1 {
+  mask: url("@/assets/icons/calendar-blank-1.svg") 0 / cover no-repeat;
+  display: inline-block;
+}
+
+.icon-calendar-blanc-2 {
+  mask: url("@/assets/icons/calendar-blank-2.svg") 0 / cover no-repeat;
+  display: inline-block;
+}
+
+.icon-caret-left-1 {
+  mask: url("@/assets/icons/caret-left-1.svg") 0 / cover no-repeat;
+  display: inline-block;
+}
+
+.icon-caret-left-2 {
+  mask: url("@/assets/icons/caret-left-2.svg") 0 / cover no-repeat;
+  display: inline-block;
+}
+
+.icon-caret-right-1 {
+  mask: url("@/assets/icons/caret-right-1.svg") 0 / cover no-repeat;
+  display: inline-block;
+}
+
+.icon-caret-right-2 {
+  mask: url("@/assets/icons/caret-right-2.svg") 0 / cover no-repeat;
+  display: inline-block;
+}
+
+.icon-gender-female-1 {
+  mask: url("@/assets/icons/gender-female-1.svg") 0 / cover no-repeat;
+  display: inline-block;
+}
+
+.icon-gender-female-2 {
+  mask: url("@/assets/icons/gender-female-2.svg") 0 / cover no-repeat;
+  display: inline-block;
+}
+
+.icon-gender-male-1 {
+  mask: url("@/assets/icons/gender-male-1.svg") 0 / cover no-repeat;
+  display: inline-block;
+}
+
+.icon-gender-male-2 {
+  mask: url("@/assets/icons/gender-male-2.svg") 0 / cover no-repeat;
+  display: inline-block;
+}
+
+.icon-heart-1 {
+  mask: url("@/assets/icons/heart-1.svg") 0 / cover no-repeat;
+  display: inline-block;
+}
+
+.icon-heart-2 {
+  mask: url("@/assets/icons/heart-2.svg") 0 / cover no-repeat;
+  display: inline-block;
+}
+
+.icon-house-simple-1 {
+  mask: url("@/assets/icons/house-simple-1.svg") 0 / cover no-repeat;
+  display: inline-block;
+}
+
+.icon-house-simple-2 {
+  mask: url("@/assets/icons/house-simple-2.svg") 0 / cover no-repeat;
+  display: inline-block;
+}
+
+.icon-link-break-1 {
+  mask: url("@/assets/icons/link-break-1.svg") 0 / cover no-repeat;
+  display: inline-block;
+}
+
+.icon-link-break-2 {
+  mask: url("@/assets/icons/link-break-2.svg") 0 / cover no-repeat;
+  display: inline-block;
+}
+
+.icon-map-pin-1 {
+  mask: url("@/assets/icons/map-pin-1.svg") 0 / cover no-repeat;
+  display: inline-block;
+}
+
+.icon-map-pin-2 {
+  mask: url("@/assets/icons/map-pin-2.svg") 0 / cover no-repeat;
+  display: inline-block;
+}
+
+.icon-person-1 {
+  mask: url("@/assets/icons/person-1.svg") 0 / cover no-repeat;
+  display: inline-block;
+}
+
+.icon-person-2 {
+  mask: url("@/assets/icons/person-2.svg") 0 / cover no-repeat;
+  display: inline-block;
+}
+
+.icon-question-1 {
+  mask: url("@/assets/icons/question-1.svg") 0 / cover no-repeat;
+  display: inline-block;
+}
+
+.icon-question-2 {
+  mask: url("@/assets/icons/question-2.svg") 0 / cover no-repeat;
+  display: inline-block;
+}
+
+.icon-queue-1 {
+  mask: url("@/assets/icons/queue-1.svg") 0 / cover no-repeat;
+  display: inline-block;
+}
+
+.icon-queue-2 {
+  mask: url("@/assets/icons/queue-2.svg") 0 / cover no-repeat;
+  display: inline-block;
+}
+
+.icon-robot-1 {
+  mask: url("@/assets/icons/robot-1.svg") 0 / cover no-repeat;
+  display: inline-block;
+}
+
+.icon-robot-2 {
+  mask: url("@/assets/icons/robot-2.svg") 0 / cover no-repeat;
+  display: inline-block;
+}
+
+.icon-skull {
+  mask: url("@/assets/icons/skull.svg") 0 / cover no-repeat;
+  display: inline-block;
+}
+
+.icon-sun {
+  mask: url("@/assets/icons/sun.svg") 0 / cover no-repeat;
+  display: inline-block;
+}
+
+.icon-x-circle-1 {
+  mask: url("@/assets/icons/x-circle-1.svg") 0 / cover no-repeat;
+  display: inline-block;
+}
+
+.icon-x-circle-2 {
+  mask: url("@/assets/icons/x-circle-2.svg") 0 / cover no-repeat;
+  display: inline-block;
+}
